--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000" width="400px">
+<h1>Krishna Singh</h1>
+<a href="#">Linkedln</a>
+<section id="skills">Software Engineer</section>
+<section id="projects">
+    <ul>
+        <li>College ERP</li>
+        <li>Food Delivery App</li>
+        <li>Flight Reservation System</li>
+    </ul>
+</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
